no spaces in displaynames of taclets
* little bit of clean up (Java 17)